--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -36,3 +36,14 @@ nav{
         }
     }
 }
+
+@media(max-width:600px){
+    nav{
+        margin-bottom: 0;
+    }
+
+    .nav-links{
+        border-radius: 30px 30px 0 0;
+        width: 100%;
+    }
+}
