--- a/src/components/Profile/style.scss
+++ b/src/components/Profile/style.scss
@@ -62,6 +62,7 @@
         }
 
         .profile-img{
+            width: 80%;
             margin-bottom: 1rem;
             margin-left: 0 !important;
         }
