update responisve nav

--- a/src/components/Profile/style.scss
+++ b/src/components/Profile/style.scss
@@ -54,7 +54,17 @@
 
 @media(max-width:780px){
     .home{
-        flex-direction: row;
+        flex-direction: column-reverse;
+
+
+        .sociais-links{
+            flex-direction: row !important;
+            margin-top: 1rem;
+        }
+
+        .sociais-links *{
+            padding: 0 1rem !important;
+        }
 
         .info{
             display: none !important;
@@ -62,7 +72,7 @@
         }
 
         .profile-img{
-            width: 80%;
+            width: 100%;
             margin-bottom: 1rem;
             margin-left: 0 !important;
         }
