--- a/src/components/Profile/style.scss
+++ b/src/components/Profile/style.scss
@@ -72,7 +72,7 @@
         }
 
         .profile-img{
-            width: 100%;
+            width: 90% !important;
             margin-bottom: 1rem;
             margin-left: 0 !important;
         }
