--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -34,6 +34,10 @@ nav{
         i:hover{
             background-color: #313463;
         }
+
+        i:active{
+            padding: 1.3rem;
+        }
     }
 }
 
@@ -45,5 +49,11 @@ nav{
     .nav-links{
         border-radius: 30px 30px 0 0;
         width: 100%;
+    }
+}
+
+@media(max-width:320px){
+    .nav-links{
+        border-radius: 0;
     }
 }
