--- a/src/components/MySkills/style.scss
+++ b/src/components/MySkills/style.scss
@@ -89,6 +89,7 @@
         .list{
             width: 100% !important;
             flex-direction: column !important;
+            justify-content: center !important;
         }
     }
 }
