--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -53,8 +53,17 @@ nav{
 }
 
 @media(max-width:320px){
-    .nav-links{
-        border-radius: 0;
-        display: none;
+    nav{
+        width: 100%;
+
+        .nav-links{
+            width: 100% !important;
+            justify-content: space-evenly !important;
+
+            a{
+                width: 10% !important;
+                padding: 0 !important;
+            }
+        }
     }
 }
