--- a/src/components/MySkills/style.scss
+++ b/src/components/MySkills/style.scss
@@ -90,6 +90,7 @@
             width: 100% !important;
             flex-direction: column !important;
             justify-content: center !important;
+            display: block !important;
         }
     }
 }
