--- a/src/components/MySkills/style.scss
+++ b/src/components/MySkills/style.scss
@@ -107,4 +107,13 @@
     .content-myskills{
         padding: 1rem 2rem !important;
     }
+
+    .list{
+        align-items: center !important;
+        justify-content: center !important;
+    }
+
+    .list-skills, .title-card{
+        padding: 0 2rem;
+    }
 }
