--- a/src/components/MyWorks/style.scss
+++ b/src/components/MyWorks/style.scss
@@ -66,6 +66,9 @@
         .work-card{
             width: 100% !important;
             margin: 1rem 0;
+            align-items: center !important;
+            justify-content: center !important;
+            text-align: center;
         }
     }
 
