--- a/src/components/MyWorks/style.scss
+++ b/src/components/MyWorks/style.scss
@@ -1,14 +1,14 @@
-.content-myworks{
+.content-myworks {
     width: 100%;
     padding-bottom: 6rem;
 
-    .box-myworks{
+    .box-myworks {
         display: flex;
         flex-direction: column;
         padding: 0 2rem;
 
 
-        .works{
+        .works {
             display: flex;
             width: 100%;
             flex-direction: row;
@@ -16,60 +16,62 @@
             justify-content: space-evenly;
             margin: 1rem 0;
 
-            .work-card{
+            .work-card {
                 display: flex;
                 flex-direction: column;
                 background-color: #382961;
                 border: 2px solid #382961;
                 align-items: flex-start;
                 justify-content: space-around;
-                border-radius: 10px;
+                border-radius: 5x;
                 width: 20%;
                 padding: 1rem;
                 transition: .5s;
 
 
-                .img-work{
+                .img-work {
                     width: 100%;
 
-                    img{
+                    img {
                         width: 100%;
-                        border-radius: 10px;
+                        border-radius: 0px;
                     }
                 }
 
                 h1,
                 .img-work,
-                .btns-works{
+                .btns-works {
                     width: 100%;
                 }
 
-                h1{
+                h1 {
                     color: #fff;
                     font-size: 16px;
                     margin: 1rem 0;
                 }
             }
 
-            .work-card:hover{
+            .work-card:hover {
                 border: 2px solid #4888ff;
             }
         }
     }
 }
-@media(max-width:780px){
-    .works{
+
+@media(max-width:780px) {
+    .works {
         flex-direction: column !important;
         margin: 0 !important;
 
-        .work-card{
+        .work-card {
             width: 100% !important;
             margin: 1rem 0;
             align-items: center !important;
             justify-content: center !important;
             text-align: center;
         }
-        .work-card:hover{
+
+        .work-card:hover {
             border: 2px solid #382961 !important;
         }
     }
