updates in works and skills

--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -38,6 +38,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            cursor: pointer;
 
             .card {
                 background-color: #382961;
