--- a/src/components/Profile/style.scss
+++ b/src/components/Profile/style.scss
@@ -33,8 +33,8 @@
         }
 
         .profile-img img{
-            width: 50%;
-            border-radius: 50px 50px 0 0;
+            width: 35%;
+            border-radius:100%;
         }
 
         .info{
